--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,7 +36,10 @@ javac.classpath=\
     ${libs.hibernate4-support.classpath}:\
     ${libs.jpa2-persistence.classpath}:\
     ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
-    ${libs.primefaces.classpath}
+    ${libs.primefaces.classpath}:\
+    ${libs.MySQLDriver.classpath}:\
+    ${libs.MYSQL.classpath}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
