--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,7 +38,6 @@ javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
     ${libs.primefaces.classpath}:\
     ${libs.MySQLDriver.classpath}:\
-    ${libs.MYSQL.classpath}:\
     ${libs.absolutelayout.classpath}:\
     ${libs.Joda-Time.classpath}
 # Space-separated list of extra javac options
@@ -65,7 +64,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=trabalho.view.CadastroFuncionario
+main.class=trabalho.view.RegistroPonto
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
