--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,17 +29,15 @@ dist.jar=${dist.dir}/SistemaPonto.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Program Files\\NetBeans 8.1\\ide\\modules\\ext\\mysql-connector-java-5.1.23-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.hibernate4-support.classpath}:\
     ${libs.jpa2-persistence.classpath}:\
-    ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
     ${libs.primefaces.classpath}:\
     ${libs.MySQLDriver.classpath}:\
     ${libs.absolutelayout.classpath}:\
-    ${libs.Joda-Time.classpath}
+    ${libs.JodaTime.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
