Complementação das funções solicitadas.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,7 +37,6 @@ javac.classpath=\
     ${libs.primefaces.classpath}:\
     ${libs.MySQLDriver.classpath}:\
     ${libs.absolutelayout.classpath}:\
-    ${libs.JodaTime.classpath}:\
     ${libs.JasperC.classpath}:\
     ${libs.Joda-Time.classpath}
 # Space-separated list of extra javac options
@@ -64,7 +63,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=trabalho.view.RegistroPonto
+main.class=trabalho.view.Principal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
