--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,7 +38,8 @@ javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${libs.absolutelayout.classpath}:\
     ${libs.JasperC.classpath}:\
-    ${libs.Joda-Time.classpath}
+    ${libs.Joda-Time.classpath}:\
+    ${libs.JodaTime.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
