Tentativa mau sucessida de correção nas listas, identificado que um dos problemas se encontra na biblioteca do jasper e o outro problema se encontra na busca do objeto

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,9 +37,8 @@ javac.classpath=\
     ${libs.primefaces.classpath}:\
     ${libs.MySQLDriver.classpath}:\
     ${libs.absolutelayout.classpath}:\
-    ${libs.JasperC.classpath}:\
     ${libs.Joda-Time.classpath}:\
-    ${libs.JodaTime.classpath}
+    ${libs.JasperReport.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
