--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,8 +37,7 @@ javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${libs.absolutelayout.classpath}:\
     ${libs.JasperReport.classpath}:\
-    ${libs.JodaTime.classpath}:\
-    ${libs.JasperC.classpath}
+    ${libs.JodaTime.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
